--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexon-web",
-  "version": "0.8.0-0",
+  "version": "0.8.0-beta.0",
   "description": "An online hexo blog editor",
   "productName": "Hexon",
   "author": "winwin_2011 <yjh2011@live.com>",
