--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "chalk": "^4.1.0",
+    "execa": "^5.0.0",
+    "inquirer": "^8.0.0",
     "lerna": "^4.0.0"
   },
   "scripts": {
     "release": "lerna version --conventional-commits --no-push -m \"chore(release): publish\"",
-    "beta": "lerna version --conventional-commits --conventional-prerelease --no-push -m \"chore(release): publish\" --preid beta",
-    "rc": "lerna version --conventional-commits --conventional-prerelease --no-push -m \"chore(release): publish\" --preid rc"
+    "beta": "node ./scripts/prerelease.js",
+    "rc": "lerna version --conventional-commits --conventional-prerelease --no-push -m \"chore(release): publish\" --preid rc",
+    "version": "node ./scripts/build.js"
   }
 }
