--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,14 +3,14 @@
   "version": "0.8.0-beta.5",
   "private": true,
   "scripts": {
+    "start": "node dist/server.js",
+    "dev": "export DEBUG=hexon:* && export NODE_ENV=development && npx nodemon -i ./data src/server.js --exec ts-node",
+    "build": "rollup --config",
+    "prebuild": "jest && rm -rf ./dist",
+    "test": "jest",
     "setup": "node install.js",
     "stop": "pm2 stop hexon",
     "restart": "pm2 restart hexon",
-    "build": "webpack",
-    "start": "node dist/main.bundle.js",
-    "dev": "export DEBUG='hexo*' && export NODE_ENV='development' && npx nodemon -i ./data src/server.js",
-    "prd": "pm2 start dist/main.bundle.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "sub:fe": "cd frontend && git pull origin master"
   },
   "dependencies": {
@@ -18,7 +18,7 @@
     "chalk": "^4.1.0",
     "crypto-js": "^4.0.0",
     "debug": "^4.1.1",
-    "eslint": "^7.8.1",
+    "eslint": "^7.31.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
@@ -55,8 +55,18 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "cjstoesm": "^1.1.4",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.4",
+    "rollup": "^2.53.3",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.4",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
   }
