--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,72 +2,73 @@
   "name": "hexon-server",
   "version": "0.8.0-beta.5",
   "private": true,
+  "description": "> TODO: description",
+  "author": "winwin_2011 <yjh2011@live.com>",
+  "homepage": "",
+  "license": "MIT",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@gitee.com:winwin_2011/winwinweb.git"
+  },
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "export DEBUG=hexon:* && export NODE_ENV=development && npx nodemon -i ./data src/server.js --exec ts-node",
+    "start": "node dist/index.js",
+    "dev": "export DEBUG=hexon-server:* && export NODE_ENV=development && nodemon -i ./data src/index.js --exec ts-node",
     "build": "rollup --config",
     "prebuild": "jest && rm -rf ./dist",
-    "test": "jest",
-    "setup": "node install.js",
-    "stop": "pm2 stop hexon",
-    "restart": "pm2 restart hexon",
-    "sub:fe": "cd frontend && git pull origin master"
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "@types/basic-auth": "^1.1.3",
+    "@types/crypto-js": "^4.0.1",
+    "@types/debug": "^4.1.5",
+    "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.2",
+    "@types/koa": "^2.13.3",
+    "@types/koa-mount": "^4.0.0",
+    "@types/koa-static": "^4.0.2",
+    "@types/koa2-cors": "^2.0.1",
+    "@types/koa__router": "^8.0.4",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.5",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.2",
+    "rollup": "^2.52.3",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "@koa/router": "^10.0.0",
     "basic-auth": "^2.0.1",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "crypto-js": "^4.0.0",
-    "debug": "^4.1.1",
-    "eslint": "^7.31.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-html": "^6.0.3",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "expand-home-dir": "^0.0.3",
-    "hexo": "^5.1.1",
-    "hexo-util": "^2.4.0",
-    "inquirer": "^7.3.3",
-    "is-git-repository": "^2.0.0",
-    "joi": "^17.4.0",
+    "debug": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
-    "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
+    "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
     "koa-compose": "^4.1.0",
-    "koa-convert": "^1.2.0",
-    "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-onerror": "^4.1.0",
-    "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
-    "list-to-tree": "^2.2.3",
-    "lodash": "^4.17.20",
-    "log4js": "^6.3.0",
-    "node-env-file": "^0.1.8",
-    "simple-git": "^2.20.1",
-    "simple-json-db": "^1.2.2",
-    "uuid": "^8.3.2",
-    "warehouse": "^4.0.0",
-    "yamljs": "^0.3.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "cjstoesm": "^1.1.4",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.4",
-    "rollup": "^2.53.3",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
+    "koa2-cors": "^2.0.6",
+    "reflect-metadata": "^0.1.13",
+    "simple-json-db": "^1.2.3",
+    "ts-node": "^10.0.0",
+    "tsyringe": "^4.6.0",
+    "winston": "^3.3.3"
   }
 }
