--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,8 +18,8 @@
     "url": "git@gitee.com:winwin_2011/winwinweb.git"
   },
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "export DEBUG=hexon-server:* && export NODE_ENV=development && nodemon -i ./data src/index.js --exec ts-node",
+    "start": "export DEBUG=null && export NODE_ENV=production && node dist/index.js",
+    "dev": "export DEBUG=hexon-server:* &&  nodemon -e ts,js src/index.js --exec ts-node",
     "build": "rollup --config",
     "prebuild": "jest && rm -rf ./dist",
     "test": "jest"
@@ -31,6 +31,7 @@
     "@types/basic-auth": "^1.1.3",
     "@types/crypto-js": "^4.0.1",
     "@types/debug": "^4.1.5",
+    "@types/hexo": "^3.8.6",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/koa": "^2.13.3",
@@ -56,6 +57,7 @@
     "chalk": "^4.1.1",
     "crypto-js": "^4.0.0",
     "debug": "^4.3.1",
+    "hexo": "^5.4.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
