--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,7 +35,9 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/koa": "^2.13.3",
+    "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-mount": "^4.0.0",
+    "@types/koa-router": "^7.4.4",
     "@types/koa-static": "^4.0.2",
     "@types/koa2-cors": "^2.0.1",
     "@types/koa__router": "^8.0.4",
@@ -61,10 +63,12 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-onerror": "^4.1.0",
+    "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "reflect-metadata": "^0.1.13",
