--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "vue": "^3.2.6",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.1",
