--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "sb": "start-storybook -p 6006",
+    "bsb": "build-storybook"
   },
   "dependencies": {
     "axios": "^0.21.4",
@@ -13,10 +15,17 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/vue3": "^6.3.8",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
+    "babel-loader": "^8.2.2",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
+    "vue-loader": "^16.5.0",
     "vue-tsc": "^0.2.2"
   }
 }
