--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@winwin/vue-global-theming": "0.1.3",
+    "@winwin/vue-simple-account": "^0.0.1",
     "axios": "^0.21.4",
     "color": "^4.0.1",
     "color-convert": "^2.0.1",
