--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hexon-web",
-  "version": "0.0.0",
+  "version": "0.8.0-beta.2",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
