--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "prebuild": "jest",
+    "test": "jest",
     "serve": "vite preview",
     "nc": "hygen component new",
     "docs:dev": "vitepress dev docs",
@@ -24,15 +26,19 @@
   "devDependencies": {
     "@types/color": "^3.0.2",
     "@types/color-convert": "^2.0.0",
+    "@types/jest": "^27.0.2",
     "@vicons/fluent": "^0.11.0",
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
+    "@vue/test-utils": "^2.0.0-rc.15",
     "babel-loader": "^8.2.2",
+    "jest": "^27.2.5",
     "jsdom": "^18.0.0",
     "less": "^4.1.1",
     "less-loader": "^7",
     "naive-ui": "^2.19.3",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
     "vitepress": "^0.19.2",
