--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -48,6 +48,9 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.2",
     "rollup": "^2.52.3",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
