--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -32,12 +32,15 @@
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/test-utils": "^2.0.0-rc.15",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "jest": "^27.2.5",
     "jsdom": "^18.0.0",
     "less": "^4.1.1",
     "less-loader": "^7",
     "naive-ui": "^2.19.3",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.17",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
