--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -19,9 +19,9 @@
     "axios": "^0.21.4",
     "color": "^4.0.1",
     "color-convert": "^2.0.1",
+    "pinia": "^2.0.0-rc.14",
     "vue": "^3.2.6",
-    "vue-router": "4",
-    "vuex": "^4.0.2"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/color": "^3.0.2",
