--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.4",
     "color": "^4.0.1",
     "color-convert": "^2.0.1",
+    "dayjs": "^1.10.7",
     "pinia": "^2.0.0-rc.14",
     "vue": "^3.2.6",
     "vue-router": "4"
