--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -1,6 +1,8 @@
 {
   "name": "hexon-web",
-  "version": "0.8.0-beta.2",
+  "version": "0.8.0-beta.4",
+  "private": true,
+  "author": "winwin_2011 <yjh2011@live.com>",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
