--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -45,6 +45,7 @@
     "less-loader": "^7",
     "naive-ui": "^2.19.3",
     "postcss": "^8.3.9",
+    "stylus": "^0.55.0",
     "tailwindcss": "^2.2.17",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.2",
