--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -22,6 +22,7 @@
     "color": "^4.0.1",
     "color-convert": "^2.0.1",
     "dayjs": "^1.10.7",
+    "hexo-front-matter": "^2.0.0",
     "pinia": "^2.0.0-rc.14",
     "vue": "^3.2.6",
     "vue-router": "4"
