--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -50,6 +50,7 @@
     "chalk": "^4.1.1",
     "crypto-js": "^4.0.0",
     "debug": "^4.3.1",
+    "execa": "^5.1.1",
     "hexo": "^5.4.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
