--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,29 +4,38 @@
   "private": true,
   "author": "winwin_2011 <yjh2011@live.com>",
   "license": "MIT",
+  "bin": "./bin/index.js",
   "scripts": {
+    "setup": "npx . install",
     "start": "export DEBUG=null && export NODE_ENV=production && node dist/index.js",
-    "dev": "export DEBUG=hexon-server:* &&  nodemon -e ts,js src/index.js --exec ts-node",
+    "stop": "pm2 stop hexon",
+    "restart": "pm2 restart hexon",
+    "prd": "pm2 start dist/index.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
+    "dev": "export DEBUG=hexon-server:* &&  nodemon -e ts,js src/server/index.ts --exec ts-node",
     "build": "rollup --config",
-    "prebuild": "jest && rm -rf ./dist",
+    "prebuild": "jest",
     "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
+    "@rollup/plugin-alias": "^3.1.8",
     "@types/basic-auth": "^1.1.3",
     "@types/crypto-js": "^4.0.1",
     "@types/debug": "^4.1.5",
     "@types/hexo": "^3.8.6",
+    "@types/inquirer": "^8.1.3",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/koa": "^2.13.3",
     "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-router": "^7.4.4",
     "@types/koa-static": "^4.0.2",
     "@types/koa2-cors": "^2.0.1",
+    "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.4",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
@@ -38,8 +47,11 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
+    "rollup-plugin-shebang": "^0.1.5",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.4"
   },
   "dependencies": {
@@ -48,10 +60,12 @@
     "@winwin/koa-simple-account": "^0.0.5",
     "basic-auth": "^2.0.1",
     "chalk": "^4.1.1",
+    "commander": "^8.3.0",
     "crypto-js": "^4.0.0",
     "debug": "^4.3.1",
     "execa": "^5.1.1",
     "hexo": "^5.4.0",
+    "inquirer": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
