fix: prd script 路径错误

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,7 @@
     "build": "webpack",
     "start": "node dist/main.bundle.js",
     "dev": "export DEBUG='hexo*' && export NODE_ENV='development' && npx nodemon -i ./data src/server.js",
-    "prd": "pm2 start dist/server.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
+    "prd": "pm2 start dist/main.bundle.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
     "test": "echo \"Error: no test specified\" && exit 1",
     "sub:fe": "cd frontend && git pull origin master"
   },
