--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -16,8 +16,9 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
+    "@vueuse/core": "^6.8.0",
     "@winwin/vue-global-theming": "^0.1.4",
-    "@winwin/vue-simple-account": "^0.0.1",
+    "@winwin/vue-simple-account": "^0.0.3",
     "axios": "^0.21.4",
     "color": "^4.0.1",
     "color-convert": "^2.0.1",
