--- a/packages/hexon-web/tsconfig.json
+++ b/packages/hexon-web/tsconfig.json
@@ -11,7 +11,8 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@/*": ["./src/components/*"]
     }
   },
   "include": [
