--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -16,6 +16,7 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@vueuse/core": "^6.8.0",
     "@winwin/vue-global-theming": "^0.1.4",
     "@winwin/vue-simple-account": "^0.0.3",
