--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -22,7 +22,8 @@
     "color-convert": "^2.0.1",
     "dayjs": "^1.10.7",
     "hexo-front-matter": "^2.0.0",
-    "monaco-editor": "^0.29.1",
+    "monaco-editor": "0.30.1",
+    "monaco-markdown": "^0.0.12",
     "pinia": "^2.0.0-rc.14",
     "uuid": "^8.3.2",
     "vue": "^3.2.6",
