--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -52,6 +52,7 @@
     "less-loader": "^7",
     "naive-ui": "^2.19.3",
     "postcss": "^8.3.9",
+    "rollup-plugin-visualizer": "^5.5.2",
     "stylus": "^0.55.0",
     "tailwindcss": "^2.2.17",
     "ts-jest": "^27.0.5",
