feat: http-secure

--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@vueuse/core": "^6.8.0",
     "@winwin/vue-global-theming": "^0.1.4",
-    "@winwin/vue-simple-account": "^0.0.3",
+    "@winwin/vue-simple-account": "^0.0.5",
     "animejs": "^3.2.1",
     "axios": "^0.21.4",
     "color": "^4.0.1",
     "color-convert": "^2.0.1",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "hexo-front-matter": "^2.0.0",
+    "jsencrypt": "^3.2.1",
     "monaco-editor": "0.30.1",
     "monaco-markdown": "^0.0.12",
     "pinia": "^2.0.0-rc.14",
@@ -36,6 +38,7 @@
     "@types/animejs": "^3.1.4",
     "@types/color": "^3.0.2",
     "@types/color-convert": "^2.0.0",
+    "@types/crypto-js": "^4.1.0",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.5",
