--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -56,7 +56,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
-    "@winwin/koa-simple-account": "^0.0.11",
+    "@winwin/koa-simple-account": "^0.0.12",
     "basic-auth": "^2.0.1",
     "chalk": "^4.1.1",
     "commander": "^8.3.0",
@@ -65,6 +65,7 @@
     "execa": "^5.1.1",
     "hexo": "^5.4.0",
     "inquirer": "^8.2.0",
+    "jsencrypt": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
@@ -76,6 +77,7 @@
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "node-jsencrypt": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "simple-json-db": "^1.2.3",
     "ts-node": "^10.0.0",
