--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.10.7",
     "hexo-front-matter": "^2.0.0",
     "jsencrypt": "^3.2.1",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "0.30.1",
     "monaco-markdown": "^0.0.12",
     "pinia": "^2.0.0-rc.14",
