--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "hexo-front-matter": "^2.0.0",
+    "js-yaml": "^4.1.0",
     "jsencrypt": "^3.2.1",
     "lodash-es": "^4.17.21",
     "monaco-editor": "0.30.1",
