--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -57,7 +57,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
-    "@winwin/koa-simple-account": "^0.0.12",
+    "@winwin/koa-simple-account": "^0.0.13",
     "basic-auth": "^2.0.1",
     "chalk": "^4.1.1",
     "commander": "^8.3.0",
@@ -65,6 +65,7 @@
     "debug": "^4.3.1",
     "execa": "^5.1.1",
     "hexo": "^5.4.0",
+    "http-errors": "^2.0.0",
     "inquirer": "^8.2.0",
     "jsencrypt": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
