--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexon-server",
-  "version": "0.8.0-beta.5",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "setup": "node install.js",
