--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.8.0-beta.5",
+  "packages": ["packages/*"],
+  "version": "0.8.0",
   "npmClient": "yarn"
 }
