--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.8.0",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.9.0-beta.0",
   "npmClient": "yarn"
 }
