--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexon-web",
-  "version": "0.8.0",
+  "version": "0.9.0-beta.0",
   "private": true,
   "author": "winwin_2011 <yjh2011@live.com>",
   "license": "MIT",
