--- a/packages/hexon-server/package.json
+++ b/packages/hexon-server/package.json
@@ -61,6 +61,7 @@
     "chalk": "^4.1.1",
     "commander": "^8.3.0",
     "crypto-js": "^4.0.0",
+    "dayjs": "^1.10.7",
     "debug": "^4.3.1",
     "execa": "^5.1.1",
     "hexo": "^5.4.0",
@@ -83,6 +84,7 @@
     "simple-json-db": "^1.2.3",
     "ts-node": "^10.0.0",
     "tsyringe": "^4.6.0",
+    "hexon-typedef": "^0.9.0-beta.4",
     "winston": "^3.3.3"
   }
 }
