--- a/packages/hexon-server/package.json
+++ b/packages/hexon-server/package.json
@@ -12,7 +12,7 @@
     "prd": "pm2 start dist/index.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
     "dev": "export DEBUG=hexon-server:* &&  nodemon -e ts,js src/server/index.ts --exec ts-node",
     "build": "rollup --config",
-    "prebuild": "yarn && jest",
+    "prebuild": "jest",
     "test": "jest"
   },
   "devDependencies": {
