--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "prebuild": "yarn && yarn test",
+    "prebuild": "yarn test",
     "test": "jest",
     "serve": "vite preview",
     "doc": "vite --config .demo/vite.config.ts"
