chore: doc and script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "scripts": {
     "beta": "node ./scripts/prerelease.js",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "setup": "cd ./packages/hexon-server && yarn setup",
+    "start": "cd ./packages/hexon-server && yarn start",
+    "prd": "cd ./packages/hexon-server && yarn prd"
   }
 }
