--- a/packages/hexon-server/package.json
+++ b/packages/hexon-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexon-server",
-  "version": "0.9.0-beta.5",
+  "version": "0.9.0",
   "private": true,
   "author": "winwin_2011 <yjh2011@live.com>",
   "license": "MIT",
@@ -65,7 +65,7 @@
     "debug": "^4.3.1",
     "execa": "^5.1.1",
     "hexo": "^5.4.0",
-    "hexon-typedef": "^0.9.0-beta.5",
+    "hexon-typedef": "^0.9.0",
     "http-errors": "^2.0.0",
     "inquirer": "^8.2.0",
     "jsencrypt": "^3.2.1",
