--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexon-web",
-  "version": "0.9.0-beta.5",
+  "version": "0.9.0",
   "private": true,
   "author": "winwin_2011 <yjh2011@live.com>",
   "license": "MIT",
@@ -23,7 +23,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "hexo-front-matter": "^2.0.0",
-    "hexon-typedef": "^0.9.0-beta.5",
+    "hexon-typedef": "^0.9.0",
     "js-yaml": "^4.1.0",
     "jsencrypt": "^3.2.1",
     "lodash-es": "^4.17.21",
