feat: hexo new path secure and hexo core auto init
Merged in HEX-14 (pull request #5)

--- a/packages/hexon-server/tsconfig.json
+++ b/packages/hexon-server/tsconfig.json
@@ -12,7 +12,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@/*": ["./src/server/*"]
     },
     "typeRoots": ["src/types", "./node_modules/@types"]
   },
