--- a/packages/hexon-server/package.json
+++ b/packages/hexon-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "private": true,
   "author": "winwin_2011 <yjh2011@live.com>",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "scripts": {
     "setup": "node ./bin/index.js install",
     "start": "export DEBUG=null && export NODE_ENV=production && node dist/index.js",
