--- a/packages/hexon-web/package.json
+++ b/packages/hexon-web/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "private": true,
   "author": "winwin_2011 <yjh2011@live.com>",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
