--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^8.5.2",
     "@types/koa": "^2.13.3",
     "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa-compress": "^4.0.3",
     "@types/koa-logger": "^3.1.2",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-router": "^7.4.4",
@@ -69,9 +70,9 @@
     "jsencrypt": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
-    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
+    "koa-compress": "^5.1.0",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-onerror": "^4.1.0",
