--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hexon/typedef": "^0.11.0",
     "@vueuse/core": "^6.8.0",
+    "@vueuse/integrations": "^8.2.5",
     "@winwin/vue-global-theming": "^0.1.5",
     "@winwin/vue-simple-account": "^0.0.5",
     "animejs": "^3.2.1",
@@ -32,6 +33,7 @@
     "pinia": "^2.0.0-rc.14",
     "prettier": "^2.5.1",
     "string-similarity": "^4.0.4",
+    "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "vue": "^3.2.26",
     "vue-router": "4",
