enh: page and layout

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -10,6 +10,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "types": ["vite-plugin-pages/client", "vite-plugin-vue-layouts/client"],
     "paths": {
       "~/*": ["./src/*"],
       "@/*": ["./src/components/*"],
