--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -68,6 +68,8 @@
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
+    "vite-plugin-pages": "^0.22.0",
+    "vite-plugin-vue-layouts": "^0.6.0",
     "vue-tsc": "^0.2.2"
   }
 }
