--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,25 +8,23 @@
     "setup": "node ./bin/index.js install",
     "start": "export DEBUG=null && export NODE_ENV=production && node dist/index.js",
     "prd": "pm2 start dist/index.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
-    "dev": "export DEBUG=@hexon/server:* &&  nodemon -e ts,js src/server/index.ts --exec ts-node",
-    "build": "rollup --config",
-    "prebuild": "jest",
+    "dev": "pnpm run build && nodemon ./dist/index.js",
+    "build": "rimraf dist && node ./scripts/build.mjs",
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.17.9",
     "@babel/node": "^7.14.7",
-    "@babel/preset-env": "^7.14.7",
-    "@rollup/plugin-alias": "^3.1.8",
+    "@babel/preset-env": "^7.16.11",
     "@types/basic-auth": "^1.1.3",
-    "@types/crypto-js": "^4.0.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/debug": "^4.1.5",
     "@types/hexo": "^3.8.6",
-    "@types/inquirer": "^8.1.3",
-    "@types/jest": "^26.0.23",
+    "@types/inquirer": "^8.2.1",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/koa": "^2.13.3",
-    "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-compress": "^4.0.3",
     "@types/koa-logger": "^3.1.2",
     "@types/koa-mount": "^4.0.0",
@@ -35,39 +33,35 @@
     "@types/koa2-cors": "^2.0.1",
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.4",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.5",
+    "esbuild": "^0.14.34",
+    "esbuild-plugin-node-externals": "^0.3.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.2",
-    "rollup": "^2.52.3",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-filesize": "^9.1.1",
-    "rollup-plugin-preserve-shebang": "^1.0.1",
-    "rollup-plugin-shebang": "^0.1.5",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^27.0.3",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.3.4"
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.4",
+    "tsconfig-paths": "^3.14.1",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@hexon/typedef": "^0.11.0",
-    "@koa/cors": "^3.1.0",
+    "@koa/cors": "^3.3.0",
     "@koa/router": "^10.0.0",
     "@winwin/koa-authentication": "^0.1.1",
     "@winwin/koa-simple-account": "^0.0.13",
     "basic-auth": "^2.0.1",
-    "chalk": "^4.1.1",
-    "commander": "^8.3.0",
+    "chalk": "^5.0.1",
+    "commander": "^9.1.0",
     "crypto-js": "^4.0.0",
-    "dayjs": "^1.10.7",
-    "debug": "^4.3.1",
-    "execa": "^5.1.1",
-    "hexo": "^5.4.0",
+    "dayjs": "^1.11.0",
+    "debug": "^4.3.4",
+    "execa": "^6.1.0",
+    "hexo": "^5.4.2",
     "http-errors": "^2.0.0",
-    "inquirer": "^8.2.0",
+    "inquirer": "^8.2.2",
     "jsencrypt": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
@@ -76,15 +70,14 @@
     "koa-compress": "^5.1.0",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
-    "koa-onerror": "^4.1.0",
+    "koa-onerror": "^4.2.0",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "node-jsencrypt": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "simple-json-db": "^1.2.3",
-    "ts-node": "^10.0.0",
+    "simple-json-db": "^2.0.0",
     "tsyringe": "^4.6.0",
-    "winston": "^3.3.3"
+    "winston": "^3.7.2"
   }
 }
