--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,63 +14,65 @@
   },
   "dependencies": {
     "@hexon/typedef": "^0.11.0",
-    "@vueuse/core": "^6.8.0",
+    "@vueuse/core": "^8.2.5",
     "@vueuse/integrations": "^8.2.5",
     "@winwin/vue-global-theming": "^0.1.5",
     "@winwin/vue-simple-account": "^0.0.5",
     "animejs": "^3.2.1",
-    "axios": "^0.21.4",
-    "color": "^4.0.1",
+    "axios": "^0.26.1",
+    "chalk": "^5.0.1",
+    "color": "^4.2.3",
     "color-convert": "^2.0.1",
     "crypto-js": "^4.1.1",
-    "dayjs": "^1.10.7",
-    "hexo-front-matter": "^2.0.0",
+    "dayjs": "^1.11.0",
+    "hexo-front-matter": "^3.0.0",
     "js-yaml": "^4.1.0",
     "jsencrypt": "^3.2.1",
     "lodash-es": "^4.17.21",
-    "monaco-editor": "0.30.1",
+    "monaco-editor": "0.33.0",
     "monaco-markdown": "^0.0.12",
     "pinia": "^2.0.0-rc.14",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "string-similarity": "^4.0.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "vite-plugin-compression": "^0.5.1",
-    "vue": "^3.2.26",
-    "vue-router": "4",
-    "zod": "^3.11.6"
+    "vue": "^3.2.31",
+    "vue-router": "4.0.14",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.4",
-    "@types/color": "^3.0.2",
+    "@types/color": "^3.0.3",
     "@types/color-convert": "^2.0.0",
-    "@types/crypto-js": "^4.1.0",
-    "@types/faker": "^5.5.9",
-    "@types/jest": "^27.0.2",
+    "@types/crypto-js": "^4.1.1",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/uuid": "^8.3.3",
-    "@vicons/fluent": "^0.11.0",
+    "@vicons/fluent": "^0.12.0",
     "@vicons/utils": "^0.1.4",
-    "@vitejs/plugin-vue": "^1.6.1",
-    "@vue/compiler-sfc": "^3.2.6",
-    "@vue/test-utils": "^2.0.0-rc.15",
-    "autoprefixer": "^10.3.7",
-    "babel-loader": "^8.2.2",
-    "faker": "^5.5.3",
-    "jest": "^27.2.5",
-    "jsdom": "^18.0.0",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/test-utils": "^2.0.0-rc.19",
+    "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
+    "faker": "^6.6.6",
+    "jest": "^27.5.1",
+    "jsdom": "^19.0.0",
     "less": "^4.1.1",
-    "less-loader": "^7",
-    "naive-ui": "^2.19.3",
-    "postcss": "^8.3.9",
-    "rollup-plugin-visualizer": "^5.5.2",
-    "stylus": "^0.55.0",
-    "tailwindcss": "^2.2.17",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.4",
+    "less-loader": "^10.2.0",
+    "naive-ui": "^2.28.0",
+    "picocolors": "^1.0.0",
+    "postcss": "^8.4.12",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "stylus": "^0.57.0",
+    "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.1",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vue-tsc": "^0.2.2"
+    "vue-tsc": "^0.34.5"
   }
 }
