--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "chalk": "^5.0.1",
+    "concurrently": "^7.1.0",
     "execa": "^6.1.0",
     "inquirer": "^8.2.2",
     "lerna": "^4.0.0"
@@ -17,6 +18,7 @@
     "build": "lerna run build",
     "setup": "cd ./packages/server && yarn setup",
     "start": "cd ./packages/server && yarn start",
-    "prd": "cd ./packages/server && yarn prd"
+    "prd": "cd ./packages/server && yarn prd",
+    "dev": "concurrently -p [{name}] -n 'client,server' -c 'green.bold,blue.bold' 'cd ./packages/server && yarn dev' 'cd ./packages/web && yarn dev' "
   }
 }
