--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -7,6 +7,7 @@
     "allowJs": true,
     "target": "es2015",
     "outDir": "dist",
+    "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
