--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "beta": "node ./scripts/prerelease.js",
-    "main": "node ./scripts/release.js",
-    "hot": "node ./scripts/hotfix.js",
+    "release":"yarn build && git add . && git commit -m 'chore: build' && lerna version --conventional-commits --no-push -m 'chore: release'",
     "build": "lerna run build",
     "setup": "cd ./packages/server && yarn setup",
     "start": "cd ./packages/server && yarn start",
