--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "release": "yarn build && git add . && git commit -m 'chore: build' && lerna version --conventional-commits --no-push -m 'chore: release'",
     "build": "lerna run build",
     "setup": "cd ./packages/server && yarn setup",
+    "script": "cd ./packages/server && yarn script",
+    "resetpwd": "cd ./packages/server && yarn resetpwd",
     "start": "cd ./packages/server && yarn start",
     "prd": "cd ./packages/server && yarn prd",
     "dev": "concurrently -p [{name}] -n 'server,client' -c 'green.bold,blue.bold' 'cd ./packages/server && yarn dev' 'cd ./packages/web && yarn dev' "
