chore: update pipline

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "release": "yarn build && git add . && git commit -m 'chore: build' && lerna version --conventional-commits --no-push -m 'chore: release'",
+    "release": "yarn build && git add . && git commit -m 'chore: build' && lerna version --conventional-commits --no-push -m 'chore: release %s'",
     "build": "lerna run build",
     "setup": "cd ./packages/server && yarn setup",
     "script": "cd ./packages/server && yarn script",
