--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,10 @@
     "@types/js-yaml": "^4.0.5",
     "@types/uuid": "^8.3.3",
     "@types/ws": "^8.5.3",
+    "@unocss/preset-attributify": "^0.33.1",
+    "@unocss/preset-uno": "^0.33.1",
+    "@unocss/reset": "^0.33.1",
+    "@unocss/transformer-directives": "^0.33.1",
     "@vicons/fluent": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -63,9 +67,9 @@
     "postcss": "^8.4.12",
     "rollup-plugin-visualizer": "^5.6.0",
     "stylus": "^0.57.0",
-    "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3",
+    "unocss": "^0.33.1",
     "vite": "^2.9.1",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-vue-layouts": "^0.6.0",
