--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.4.1",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
     "@types/ws": "^8.5.3",
     "@vicons/fluent": "^0.12.0",
