--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "release": "pnpm build && git add . && git commit -m 'chore: build' && standard-version --releaseCommitMessageFormat='chore: release v{{currentTag}}'",
+    "prerelease": "pnpm build && git add . && git commit -m 'chore: build' && standard-version --releaseCommitMessageFormat='chore: release v{{currentTag}}' --prerelease",
     "build": "concurrently -p [{name}] -n 'server,client' -c 'green.bold,blue.bold' 'cd ./server && pnpm build' 'cd ./client && pnpm build' ",
     "setup": "cd ./server && pnpm install -P && pnpm run setup",
     "script": "cd ./server && pnpm script",
