--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexon",
-  "version": "0.12.2",
+  "version": "0.12.3-0",
   "private": true,
   "author": "winwin2011 <yjh2011@live.com>",
   "license": "GPL-3.0",
