--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "setup": "node ./bin/index.js install",
     "resetpwd": "node ./bin/index.js resetpwd",
     "script": "node ./bin/index.js script",
-    "start": "export DEBUG=null && export NODE_ENV=production && node dist/index.js",
+    "start": "cross-env DEBUG=null NODE_ENV=production && node dist/index.js",
     "prd": "pm2 start dist/index.js --name hexon -o log/pm2-log.log -e log/pm2-err.log",
     "dev": "pnpm run build && nodemon ./dist/index.js",
     "build": "rimraf dist && node ./scripts/build.mjs",
@@ -29,6 +29,7 @@
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.4",
     "@types/node": "^17.0.25",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.14.34",
     "esbuild-plugin-node-externals": "^0.3.0",
     "eslint": "^8.13.0",
