feat: install via env

--- a/server/package.json
+++ b/server/package.json
@@ -55,6 +55,7 @@
     "crypto-js": "^4.0.0",
     "dayjs": "^1.11.0",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "execa": "^6.1.0",
     "hexo": "^5.4.2",
     "http-errors": "^2.0.0",
