chore: dev-init script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "resetpwd": "cd ./server-scripts && node ./bin/index.js resetpwd",
     "start": "cd ./server && pnpm start",
     "prd": "cd ./server && pnpm prd",
+    "dev-init": "pnpm install && pnpm run build && cd ./server-scripts && node ./bin/index.js install",
     "dev": "concurrently -p [{name}] -n 'server,client' -c 'green.bold,blue.bold' 'cd ./server && pnpm dev' 'cd ./client && pnpm dev' "
   },
   "devDependencies": {
