--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@winwin/vue-global-theming": "^0.1.5",
     "@winwin/vue-side-split": "^0.0.5",
     "animejs": "^3.2.2",
+    "aplayer": "^1.10.1",
     "axios": "^0.26.1",
     "chalk": "^5.3.0",
     "color": "^4.2.3",
